# library

./: .coverage  .dockerignore  .env.template  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml
config/: settings.py  urls.py
config/tests/: test_openapi_schema.py
tests/: test_authors_api.py  test_books_api.py  test_loans_api.py  test_permissions_users.py  test_users_api.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_uniq_user_email_non_null.py
